2.1.4
=====
- Set ApplicationContext to RedirectViews so that RequestDataValueProcessor can modify the
  URLs to which the application redirects.
- Modified behavuour at ThymeleafViewResolver so that a non-View registered bean cannot be
  accidentally picked for prototyping a view object.


2.1.3
=====
- Added MapAccessor to ThymeleafEvaluationContext in order to allow dot syntax accessing map
  context variables in expressions: ${oneMap.oneKey}
- Enhanced delegation of the execution of Spring EL expressions into Spring's own infrastructure
  fixing, among other scenarios, the correct conversion of iterated objects.


2.1.2
=====
- Disabled integration with RequestDataValueProcessor when Spring version is >= 4.x in order to
  avoid exceptions (due to interface changes between spring 3.2 and 4.0).
- Fixed marker hidden inputs being added for checkboxes and multiple selects even when they are
  disabled (provoking undesired deletion of attribute values).


2.1.1
=====
- Fixed incorrect Spring object binding of single-level (no x.y field) expressions, resulting in
  ConversionService not being applied on certain scenarios.


2.1.0 (from 2.0.19)
===================
(See What's New in Thymeleaf 2.1 at http://www.thymeleaf.org/whatsnew21.html)
- New Feature: More integrated acccess to beans from expressions
- New Feature: Integration of Spring type conversion infrastructure
- New Feature: Spring-resource based template resolver
- New Feature: Render view fragments directly from controllers
- New Feature: New th:errorclass for adding CSS class to form fields in error
- New Feature: Additional form validation error reporting options
- New Feature: Transparent integration with Spring's RequestDataValueProcessor


2.0.19
======
- Applied annotation-based autowiring to custom Thymeleaf View classes even when they were not declared as a bean
  at the application context.
- Implemented size() and isEmpty() in "beans" map in context variables.


2.0.18
======
- (No changes)

